# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-12-12 15:24:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-112

    Summary:
      cms, fix "Root.get_skin"
    Revision:
      itools--main--0.12--patch-112


    modified files:
     Changelog cms/Root.py


2005-12-12 14:40:09 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-111

    Summary:
      scripts.icms, fix "init --source"
    Revision:
      itools--main--0.12--patch-111


    modified files:
     Changelog scripts/icms.py


2005-12-12 13:48:43 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-110

    Summary:
      merge from herve (#179, #232)
    Revision:
      itools--main--0.12--patch-110

    Patches applied:
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-172
       saving the search form, just a mock-up.
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-186
       I'm bad at boolean logic, drop the is_admin comparison, assuming an admin is the only one that could modify other's acounts.
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-188
       fix registring of the _ac cookie, particulary after password editing (#232).
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-190
       Split application preferences and user information that must be confirmed (#179).
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-192
       update the link to account/password form.
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-201
       avoid a long space in the msgid and url.
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-202
       <encolpe>grmphf</encolpe>
    

    new files:
     cms/ui/.arch-ids/WebSite_search_form.xml.en.id
     cms/ui/WebSite_search_form.xml.en
     cms/ui/images/.arch-ids/button_calendar.png.id
     cms/ui/images/button_calendar.png

    modified files: